--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,7 @@
 # Cloudflare Pages 配置文件
 # 文档: https://developers.cloudflare.com/pages/configuration/
 
-name = "beichenxu-web"
+name = "beichenxuwebpage"
 compatibility_date = "2024-01-01"
 
 # 静态站点：直接使用根目录作为输出
